--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,1 +1,7 @@
 <app-header></app-header>
+<app-home></app-home>
+<app-about></app-about>
+<app-skills></app-skills>
+<app-experiences></app-experiences>
+<app-projects></app-projects>
+<app-contact></app-contact>
