--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="black-bg mh-header mh-fixed-nav nav-scroll mh-xs-mobile-nav" id="mh-header">
+<header class="black-bg mh-header bg-black fixed-top mh-fixed-nav nav-scroll mh-xs-mobile-nav" id="mh-header">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -21,15 +21,7 @@
                         <li class="nav-item">
                            <a class="nav-link" href="#mh-experience">Experiences</a>
                         </li>                                
-                        <li class="nav-item">
-                            <a class="nav-link" href="#mh-portfolio">Portfolio</a>
-                        </li>                               
-                        <li class="nav-item">
-                            <a class="nav-link" href="#mh-pricing">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#mh-blog">Blog</a>
-                        </li>
+                        
                         <li class="nav-item">
                            <a class="nav-link" href="#mh-contact">Contact</a>
                         </li>
