--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,4 @@
+
 <app-header></app-header>
 <app-home></app-home>
 <app-about></app-about>
@@ -5,3 +6,6 @@
 <app-experiences></app-experiences>
 <app-projects></app-projects>
 <app-contact></app-contact>
+
+<!-- <app-header></app-header>
+<router-outlet></router-outlet> -->
