--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 
-<router-outlet></router-outlet>
+<app-header></app-header>
+<app-home></app-home>
+<app-about></app-about>
+<app-skills></app-skills>
+<app-experiences></app-experiences>
+<app-projects></app-projects>
+<app-contact></app-contact>
+
