--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,11 +1,8 @@
 
-<app-header></app-header>
+<!-- <app-header></app-header>
 <app-home></app-home>
 <app-about></app-about>
 <app-skills></app-skills>
 <app-experiences></app-experiences>
 <app-projects></app-projects>
-<app-contact></app-contact>
-
-<!-- <app-header></app-header>
-<router-outlet></router-outlet> -->
+<app-contact></app-contact> -->
