--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,10 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
 @import 'assets/css/responsive.css';
+@import 'assets/css/animate.css';
+@import 'assets/css/defauld.css';
+
+@import 'assets/css/jquery.fancybox.min.css';
 
 
 
