--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,7 +108,7 @@
     overflow-x: hidden !important;
     text-align: left;
     position: relative;
-    color: #999999;
+    color: #999999 !important;
     opacity: 0.9; }
   
   h1, h2, h3, h4, h5, h6 {
