--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="black-bg mh-header bg-black fixed-top mh-fixed-nav nav-scroll mh-xs-mobile-nav" id="mh-header">
+<header class="bg-dark mh-header  mh-fixed-nav nav-scroll mh-xs-mobile-nav" id="mh-header">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
