--- a/src/app/home-page/contact/contact.component.html
+++ b/src/app/home-page/contact/contact.component.html
@@ -16,8 +16,8 @@
                                   <div class="each-info media-body">
                                       <h4>Address</h4>
                                       <address>
-                                          5th Avenue, 34th floor, <br> 
-                                           New york
+                                         Bangalore, Karnataka-87
+                                         India
                                       </address>
                                   </div>
                               </div>
@@ -29,8 +29,8 @@
                                   </div>
                                   <div class="each-info media-body">
                                       <h4>Email</h4>
-                                      <a href="mailto:yourmail@email.com">yourmail@email.com</a><br>
-                                      <a href="mailto:yourmail@email.com">yourmail@email.com</a>
+                                      <a href="mailto:Sanjibmallik.prof@gmail.com">Sanjibmallik.prof@email.com</a><br>
+                                      <a href="mailto:Sanjib.mallik24@gmail.com">Sanjib.mallik24@gmail.com</a>
                                   </div>
                               </div>
                           </div>
@@ -41,8 +41,8 @@
                                   </div>
                                   <div class="each-info media-body">
                                       <h4>Phone</h4>
-                                      <a href="callto:(880)-8976-987">(880)-8976-987</a><br>
-                                      <a href="callto:(880)-8976-987">(880)-8976-987</a>
+                                      <a href="callto:+91 7259550530">+91 7259550530</a><br>
+                                     
                                   </div>
                               </div>
                           </div>
@@ -84,9 +84,9 @@
                               <div class="col-sm-6">
                                   <ul class="social-icon">
                                       <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                                      <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                                      <li><a href=""><i class="fa fa-linkedin"></i></a></li>
                                       <li><a href=""><i class="fa fa-github"></i></a></li>
-                                      <li><a href=""><i class="fa fa-dribbble"></i></a></li>
+                                     
                                   </ul>
                               </div>
                           </div>
