--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -16,7 +16,7 @@
                             <a class="nav-link" href="#mh-about">About</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="#mh-skills">Skills</a>
+                           <a class="nav-link active" href="#mh-skills">Skills</a>
                         </li>                                
                         <li class="nav-item">
                            <a class="nav-link" href="#mh-experience">Experiences</a>
