--- a/src/app/home-page/home/home.component.html
+++ b/src/app/home-page/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="mh-home image-bg home-2-img" id="mh-home">
+<section class="mh-home image-bg" id="mh-home">
   <div class="img-foverlay img-color-overlay">
       <div class="container">
           <div class="row section-separator xs-column-reverse vertical-middle-content home-padding">
@@ -8,20 +8,20 @@
                           <span>Hello I'm</span>
                       </div>
                       
-                      <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Sanjib Mallik</h2>
-                      <h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">Software Engineer</h4>
+                      <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">{{user.userName}}</h2>
+                      <h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">{{user.role}}</h4>
                       
                       <ul>
-                          <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><i class="fa fa-envelope"></i><a href="mailto:">sanjibmallik.prof@email.com</a></li>
-                          <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><i class="fa fa-phone"></i><a href="callto:">+91- 7259550530</a></li>
-                          <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s"><i class="fa fa-map-marker"></i><address>#1257, Varthur Idgha road, Bangalore-87, Karnataka, INDIA</address></li>
+                          <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><i class="fa fa-envelope"></i><a href="mailto:user.emaiId">{{user.emailId}}</a></li>
+                          <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><i class="fa fa-phone"></i><a href="callto:">{{user.phone}}</a></li>
+                          <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s"><i class="fa fa-map-marker"></i><address>{{user.address}}</address></li>
                       </ul>
                       
                       <ul class="social-icon wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                           <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                          <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                          <li><a href=""><i class="fa fa-linkedin"></i></a></li>
                           <li><a href=""><i class="fa fa-github"></i></a></li>
-                          <li><a href=""><i class="fa fa-dribbble"></i></a></li>
+                         
                       </ul>
                   </div>
               </div>
