--- a/src/app/home-page/skills/skills.component.html
+++ b/src/app/home-page/skills/skills.component.html
@@ -9,74 +9,19 @@
                   <div class="mh-skills-inner">
                       <div class="mh-professional-skill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                           <h3>Technical Skills</h3>
-                          <div class="each-skills">
+                          <div class="each-skills" *ngFor="let skill of skills">
                               <div class="candidatos">
                                   <div class="parcial">
                                       <div class="info">
-                                          <div class="nome">Javascript</div>
-                                          <div class="percentagem-num">86%</div>
+                                          <div class="nome">{{skill.name}}</div>
+                                          <div class="percentagem-num">{{skill.rate}}%</div>
                                       </div>
                                       <div class="progressBar">
-                                          <div class="percentagem" style="width: 86%;"></div>
+                                          <div class="percentagem" [style.width]="skill.rate+'%'"></div>
                                       </div>
                                   </div>
                               </div>
-                              <div class="candidatos">
-                                  <div class="parcial">
-                                      <div class="info">
-                                          <div class="nome">Java</div>
-                                          <div class="percentagem-num">46%</div>
-                                      </div>
-                                      <div class="progressBar">
-                                          <div class="percentagem" style="width: 46%;"></div>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="candidatos">
-                                  <div class="parcial">
-                                      <div class="info">
-                                          <div class="nome">Python</div>
-                                          <div class="percentagem-num">38%</div>
-                                      </div>
-                                      <div class="progressBar">
-                                          <div class="percentagem" style="width: 38%;"></div>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="candidatos">
-                                  <div class="parcial">
-                                      <div class="info">
-                                          <div class="nome">PHP</div>
-                                          <div class="percentagem-num">17%</div>
-                                      </div>
-                                      <div class="progressBar">
-                                          <div class="percentagem" style="width: 17%;"></div>
-                                      </div>
-                                  </div>
-                              </div>                                    
                               
-                              <div class="candidatos">
-                                  <div class="parcial">
-                                      <div class="info">
-                                          <div class="nome">Python</div>
-                                          <div class="percentagem-num">38%</div>
-                                      </div>
-                                      <div class="progressBar">
-                                          <div class="percentagem" style="width: 38%;"></div>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="candidatos">
-                                  <div class="parcial">
-                                      <div class="info">
-                                          <div class="nome">PHP</div>
-                                          <div class="percentagem-num">17%</div>
-                                      </div>
-                                      <div class="progressBar">
-                                          <div class="percentagem" style="width: 17%;"></div>
-                                      </div>
-                                  </div>
-                              </div>
                           </div>
                       </div>
                   </div>
