--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -7,7 +7,7 @@
                     <span class="navbar-toggler-icon icon"></span>
                 </button>
             
-                <div class="navbar-collapse collapse" id="navbarSupportedContent" style="">
+                <div class="navbar-collapse collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto ml-auto">
                         <li class="nav-item active">
                             <a class="nav-link" href="#mh-home">Home</a>
@@ -16,7 +16,7 @@
                             <a class="nav-link" href="#mh-about">About</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link active" href="#mh-skills">Skills</a>
+                           <a class="nav-link" href="#mh-skills">Skills</a>
                         </li>                                
                         <li class="nav-item">
                            <a class="nav-link" href="#mh-experience">Experiences</a>
