--- a/src/app/home-page/about/about.component.html
+++ b/src/app/home-page/about/about.component.html
@@ -13,17 +13,11 @@
                   I have rich experience in web site design & building 
                   and customization. Also I am good at</p>
                   <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                      <ul>
-                          <li><span>php</span></li>
-                          <li><span>html</span></li>
-                          <li><span>css</span></li>
-                          <li><span>php</span></li>
-                          <li><span>wordpress</span></li>
-                          <li><span>React</span></li>
-                          <li><span>Javascript</span></li>
+                      <ul >
+                          <li *ngFor = "let skill of skills"><span>{{skill.name}}</span></li>
                       </ul>
                   </div>
-                  <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
+                  <a target="_blank" href="{{link}}" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
               </div>
           </div>
       </div>
