--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-
-<app-header></app-header>
-<app-home></app-home>
-<app-about></app-about>
-<app-skills></app-skills>
-<app-experiences></app-experiences>
-<app-projects></app-projects>
-<app-contact></app-contact>
+<app-home-page></app-home-page>
 
