--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -16,6 +16,9 @@
                             <a class="nav-link" href="#mh-about">About</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#mh-education">Education</a>
+                        </li>
+                        <li class="nav-item">
                            <a class="nav-link" href="#mh-skills">Skills</a>
                         </li>                                
                         <li class="nav-item">
