--- a/src/styles.scss
+++ b/src/styles.scss
@@ -677,7 +677,7 @@
   .white-vertion .mh-header .navbar-nav li.active a {
     padding-right: 0;
     padding-left: 0;
-    border-color: #000; }
+    border-color: red; }
   .white-vertion .mh-header.nav-3 .navbar-nav li.active a {
     border-color: transparent; }
   .white-vertion .mh-footer .form-control {
