--- a/src/app/home-page/about/about.component.html
+++ b/src/app/home-page/about/about.component.html
@@ -9,9 +9,7 @@
           <div class="col-sm-12 col-md-6">
               <div class="mh-about-inner">
                   <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">About Me</h2>
-                  <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Hello, I’m a Sanjib, web-developer based on India. 
-                  I have rich experience in web site design & building 
-                  and customization. Also I am good at</p>
+                  <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">{{user.aboutMe}}</p>
                   <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                       <ul >
                           <li *ngFor = "let skill of skills"><span>{{skill.name}}</span></li>
@@ -37,9 +35,7 @@
                   <i class="fa fa-bullseye purple-color"></i>
                   <h3>UI Design</h3>
                   <p>
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                      magna aliquam erat volutpat.
+                     Work in progress
                   </p>
               </div>
           </div>
@@ -48,9 +44,7 @@
                   <i class="fa fa-code iron-color"></i>
                   <h3>Web Development</h3>
                   <p>
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                      magna aliquam erat volutpat.
+                    Work in progress
                   </p>
               </div>
           </div>
@@ -59,141 +53,10 @@
                   <i class="fa fa-object-ungroup sky-color"></i>
                   <h3>App Development</h3>
                   <p>
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                      magna aliquam erat volutpat.
+                    Work in progress
                   </p>
               </div>
           </div>
       </div>
   </div>
 </section>
-
-<!--
-===================
-FEATURE PROJECTS
-===================
--->
-<section class="mh-featured-project image-bg featured-img-one">
-  <div class="img-color-overlay">
-      <div class="container">
-          <div class="row section-separator">
-              <div class="section-title col-sm-12">
-                  <h3>Featured Projects</h3>
-              </div>
-              <div class="col-sm-12">
-                  <div class="mh-single-project-slide-by-side row">
-                      <!-- Project Items -->
-                      <div class="col-sm-12 mh-featured-item">
-                          <div class="row">
-                              <div class="col-sm-7">
-                                  <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                      <img src="assets/images/p-2.png" alt="" class="img-fluid">
-                                  </div>
-                              </div>
-                              <div class="col-sm-5">
-                                  <div class="mh-featured-project-content">
-                                      <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web Design</h4>
-                                      <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Wrap</h2>
-                                      <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Design & Development</span>
-                                      <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Stamp is a clean and elegant Multipurpose Landing Page Template. 
-                                      It will fit perfectly for Startup, Web App or any type of Web Services.
-                                      It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme. 
-                                      All variations are organized separately so you can use / customize the template very easily.</p>
-                                      <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
-                                      <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
-                                          <blockquote>
-                                    <q>Excellent Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    <cite>- Shane Kavanagh</cite>
-                                  </blockquote>
-                                  <blockquote>
-                                    <q>Creative Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    <cite>- Shane Kavanagh</cite>
-                                  </blockquote>
-                                  <blockquote>
-                                    <q>Organize Code - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    <cite>- Shane Kavanagh</cite>
-                                  </blockquote>
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                      <!-- Project Items -->
-                      <div class="col-sm-12 mh-featured-item">
-                          <div class="row">
-                              <div class="col-sm-7">
-                                  <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                      <img src="assets/images/p-2.png" alt="" class="img-fluid">
-                                  </div>
-                              </div>
-                              <div class="col-sm-5">
-                                  <div class="mh-featured-project-content">
-                                      <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web Design</h4>
-                                      <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Wrap</h2>
-                                      <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Design & Development</span>
-                                      <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Stamp is a clean and elegant Multipurpose Landing Page Template. 
-                                      It will fit perfectly for Startup, Web App or any type of Web Services.
-                                      It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme. 
-                                      All variations are organized separately so you can use / customize the template very easily.</p>
-                                      <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
-                                      <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
-                                          <blockquote>
-                                    <q>Excellent Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    <cite>- Shane Kavanagh</cite>
-                                  </blockquote>
-                                  <blockquote>
-                                    <q>Creative Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    <cite>- Shane Kavanagh</cite>
-                                  </blockquote>
-                                  <blockquote>
-                                    <q>Organize Code - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    <cite>- Shane Kavanagh</cite>
-                                  </blockquote>
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                      <!-- Project Items -->
-                      <div class="col-sm-12 mh-featured-item">
-                          <div class="row">
-                              <div class="col-sm-7">
-                                  <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                      <img src="assets/images/p-2.png" alt="" class="img-fluid">
-                                  </div>
-                              </div>
-                              <div class="col-sm-5">
-                                  <div class="mh-featured-project-content">
-                                      <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web Design</h4>
-                                      <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Wrap</h2>
-                                      <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Design & Development</span>
-                                      <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Stamp is a clean and elegant Multipurpose Landing Page Template. 
-                                      It will fit perfectly for Startup, Web App or any type of Web Services.
-                                      It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme. 
-                                      All variations are organized separately so you can use / customize the template very easily.</p>
-                                      <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
-                                      <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
-                                          <blockquote>
-                                    <q>Excellent Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    <cite>- Shane Kavanagh</cite>
-                                  </blockquote>
-                                  <blockquote>
-                                    <q>Creative Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    <cite>- Shane Kavanagh</cite>
-                                  </blockquote>
-                                  <blockquote>
-                                    <q>Organize Code - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    <cite>- Shane Kavanagh</cite>
-                                  </blockquote>
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div> <!-- End: .row -->
-      </div>
-  </div>
-</section>  
