--- a/src/app/home-page/experiences/experiences.component.html
+++ b/src/app/home-page/experiences/experiences.component.html
@@ -2,68 +2,22 @@
   <div class="img-color-overlay">
       <div class="container">
           <div class="row section-separator">
-              <div class="col-sm-12 col-md-6">
-                  <div class="mh-education">
-                      <h3 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Education</h3>
-                      <div class="mh-education-deatils">
-                          <!-- Education Institutes-->
-                          <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                              <h4>Art & Multimedia From <a href="">Oxford University</a></h4>
-                              <div class="mh-eduyear">2005-2008</div>
-                              <p>It is a long established fact that a reader will be distracted by the readable content of a 
-                              page when looking at its layout. The point of using  Lorem Ipsum </p>
-                          </div>                                
-                          <!-- Education Institutes-->
-                          <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                              <h4>Art & Multimedia From <a href="">Oxford University</a></h4>
-                              <div class="mh-eduyear">2005-2008</div>
-                              <p>It is a long established fact that a reader will be distracted by the readable content of a 
-                              page when looking at its layout. The point of using  Lorem Ipsum </p>
-                          </div>                                
-                          <!-- Education Institutes-->
-                          <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
-                              <h4>Art & Multimedia From <a href="">Oxford University</a></h4>
-                              <div class="mh-eduyear">2005-2008</div>
-                              <p>It is a long established fact that a reader will be distracted by the readable content of a 
-                              page when looking at its layout. The point of using L orem Ipsum </p>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-sm-12 col-md-6">
+              
+              <div class="col-sm-12 col-md-12">
                   <div class="mh-work">
                        <h3>Work Experience</h3>
-                      <div class="mh-experience-deatils">
-                          <!-- Education Institutes-->
+                      <div class="mh-experience-deatils" *ngFor="let exp of experience">
+                      
                           <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
-                              <h4>UI/UX Designer <a href="">IronSketch</a></h4>
-                              <div class="mh-eduyear">2005-2008</div>
+                              <h4>{{exp.role}} <a href="{{exp.website}}" target="_blank"> {{exp.companyName}}</a></h4>
+                              <div class="mh-eduyear">{{exp.period}}</div>
                               <span>Responsibility :</span>
-                              <ul class="work-responsibility">
-                                  <li><i class="fa fa-circle"></i>Validate CSS</li>
-                                  <li><i class="fa fa-circle"></i>Project Management</li>
+                              <ul class="work-responsibility" *ngFor="let res of exp.responsibilities">
+                                  <li><i class="fa fa-circle"></i>{{res.res}}</li>
+                          
                               </ul>
                           </div>                                
-                          <!-- Education Institutes-->
-                          <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
-                              <h4>Art & Multimedia From <a href="">Oxford University</a></h4>
-                              <div class="mh-eduyear">2005-2008</div>
-                              <span>Responsibility :</span>
-                              <ul class="work-responsibility">
-                                  <li><i class="fa fa-circle"></i>Validate CSS</li>
-                                  <li><i class="fa fa-circle"></i>Project Management</li>
-                              </ul>
-                          </div>                                
-                          <!-- Education Institutes-->
-                          <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                              <h4>Art & Multimedia From <a href="">Oxford University</a></h4>
-                              <div class="mh-eduyear">2005-2008</div>
-                              <span>Responsibility :</span>
-                              <ul class="work-responsibility">
-                                  <li><i class="fa fa-circle"></i>Validate CSS</li>
-                                  <li><i class="fa fa-circle"></i>Project Management</li>
-                              </ul>
-                          </div>
+                         
                       </div>
                   </div>
               </div>
