--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,8 +1,8 @@
-
-<!-- <app-header></app-header>
+<app-header></app-header>
 <app-home></app-home>
 <app-about></app-about>
+<app-education></app-education>
 <app-skills></app-skills>
 <app-experiences></app-experiences>
-<app-projects></app-projects>
-<app-contact></app-contact> -->
+<!-- <app-projects></app-projects> -->
+<app-contact></app-contact>
