--- a/src/app/home-page/home/home.component.html
+++ b/src/app/home-page/home/home.component.html
@@ -18,9 +18,9 @@
                       </ul>
                       
                       <ul class="social-icon wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                          <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                          <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-                          <li><a href=""><i class="fa fa-github"></i></a></li>
+                          <li><a href="{{user.facebookLink}}" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                          <li><a href="{{user.linkedInLink}}" target="_blank"><i class="fa fa-linkedin" ></i></a></li>
+                          <li><a href="{{user.githubLink}}" target="_blank"><i class="fa fa-github"></i></a></li>
                          
                       </ul>
                   </div>
