--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -3,30 +3,33 @@
     <div class="container">
         <div class="row">
             <nav class="navbar navbar-expand-lg mh-nav nav-btn">
-                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon icon"></span>
                 </button>
-            
+
                 <div class="navbar-collapse collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#mh-home">Home</a>
+                            <a class="nav-link" (click)="scrollPage($event.target)" href="#mh-home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#mh-about">About</a>
+                            <a class="nav-link" (click)="scrollPage($event.target)" href="#mh-about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#mh-education">Education</a>
+                            <a class="nav-link" (click)="scrollPage($event.target)" href="#mh-education">Education</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="#mh-skills">Skills</a>
-                        </li>                                
+                            <a class="nav-link" (click)="scrollPage($event.target)" href="#mh-skills">Skills</a>
+                        </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="#mh-experience">Experiences</a>
-                        </li>                                
-                        
+                            <a class="nav-link" (click)="scrollPage($event.target)"
+                                href="#mh-experience">Experiences</a>
+                        </li>
+
                         <li class="nav-item">
-                           <a class="nav-link" href="#mh-contact">Contact</a>
+                            <a class="nav-link" (click)="scrollPage($event.target)" href="#mh-contact">Contact</a>
                         </li>
                     </ul>
                 </div>
